# hypothesis-awkward

./: .gitignore  CLAUDE.md  README.md  dprint.json  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/rules/: ci.md  git.md  markdown.md  testing-patterns.md
.claude/skills/update-docs/: SKILL.md
.design/: README.md
.design/api/: 2026-01-21-types-api.md  2026-02-02-forms-api.md  2026-02-04-arrays-api.md  2026-02-12-contents-api.md  2026-02-13-string-bytestring-api.md  2026-02-23-max-length-api.md
.design/impl/: 2026-02-17-contents-tree-builder.md  2026-02-21-contents-top-down-builder.md
.design/notes/: 2026-01-22-types-tests-progress.md  2026-02-12-positional-keyword-convention.md
.design/research/: 2026-01-21-type-system-research.md  2026-01-21-ux-interview-01.md  2026-02-04-direct-constructors-research.md  2026-02-23-max-length-research.md
src/hypothesis_awkward/: __init__.py  builtins_.py  numpy.py  util.py
src/hypothesis_awkward/strategies/: __init__.py  misc.py
src/hypothesis_awkward/util/: __init__.py  awkward.py  draw.py  dtype.py  numpy.py
tests/: test_builtins_.py  test_numpy.py
tests/strategies/: test_builtins_.py  test_numpy.py  test_st_ranges.py
tests/strategies/builtins_/: test_from_lists.py  test_lists.py
tests/strategies/constructors/: test_array.py  test_arrays.py
tests/strategies/contents/: test_content.py  test_content_lists.py  test_empty_array.py  test_leaf.py  test_list_array.py  test_list_offset_array.py  test_numpy_array.py  test_record_array.py  (+3 more)
tests/util/: test_draw.py  test_dtype.py  test_numpy.py
(+37 files in other folders)
